--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!--Шапка сайта-->
 
-  <header class="container">
+  <!-- <header class="container">
     <div class="container-header">
       <a href="./studio.html" class="container-header__logo"><span
           class="container-header__logo-web">Web</span>Studio</a>
@@ -52,17 +52,17 @@
         </li>
       </ul>
     </div>
-  </header>
+  </header> -->
 
   <!--герой-->
 
   <main>
     <section class="hero">
-      <div class="container">
+      <div class="hero__container">
         <div class="hero__description">
           <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
 
-          <!--modal windows-->
+          <!-- modal windows -->
           <button class="hero__button-primary" data-modal-open>Заказать услугу</button>
         </div>
       </div>
@@ -132,7 +132,7 @@
     <!--Чем занимаемся-->
     <section class="achievements">
       <!--CONTAINER-->
-      <div class="container">
+      <!-- <div class="container">
         <h2 class="achievements__title">Чем мы занимаемся</h2>
         <ul class="achievements__list">
           <li class="achievements__image">
@@ -148,13 +148,13 @@
             <p class="achievements__picture-title">дизайнерские решения</p>
           </li>
         </ul>
-      </div>
+      </div> -->
     </section>
 
     <!--Наша команда-->
     <section class="team">
       <!--CONTAINER-->
-      <div class="container">
+      <!-- <div class="container">
         <h2 class="team__title">Наша команда</h2>
         <div class="team__description">
           <div class="team__fon">
@@ -329,12 +329,12 @@
             </ul>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
   </main>
 
   <!--Постоянные клиенты-->
-  <section class="client">
+  <!-- <section class="client">
     <div class="container client-main">
       <h2 class="client__title">Постоянные клиенты</h2>
       <ul class="client__brand">
@@ -383,13 +383,13 @@
       </ul>
 
     </div>
-  </section>
+  </section> -->
 
   <!--футер-->
 
   <footer class="footer">
     <!--CONTAINER-->
-    <div class="container container-footer">
+    <!-- <div class="container container-footer">
 
       <div class="footer__info">
         <a href="./studio.html" class="container-header__logo"><span class="container-header__logo-web">Web</span><span
@@ -450,7 +450,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
@@ -461,7 +461,7 @@
         </svg>
       </button>
 
-<!-- Modal form -->
+ <!-- Modal form  -->
       <form class="form">
         <div class="form__row">
         <label for="name" class="form__label">Имя</label>
@@ -525,7 +525,7 @@
      <button class="checkbox__button-primary " data-modal-open>отправить</button>
     </div>
 
-  </div>
+  </div> -->
 
   <script src="./js/modal.js"></script>
 </body>
