--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!--Шапка сайта-->
 
-  <!-- <header class="container">
+  <header class="container">
     <div class="container-header">
       <a href="./studio.html" class="container-header__logo"><span
           class="container-header__logo-web">Web</span>Studio</a>
@@ -51,8 +51,13 @@
             +38 096 111 11 11</a>
         </li>
       </ul>
+      <a href="#">
+        <svg class="team__icon-header">
+          <use href="./images/icon.svg#icon-menu_mobile"></use>
+        </svg>
+      </a>
     </div>
-  </header> -->
+  </header> 
 
   <!--герой-->
 
@@ -70,7 +75,7 @@
 
     <!--Особенности-->
 
-    <section class="feature__main">
+    <section class="section__feature-main">
       <div class="container feature">
         <h2 hidden class="feature__title">#</h2>
         <ul class="feature__list">
@@ -130,9 +135,9 @@
     </section>
 
     <!--Чем занимаемся-->
-    <section class="achievements">
+    <section class="section__achievements">
       <!--CONTAINER-->
-      <!-- <div class="container">
+       <div class="container">
         <h2 class="achievements__title">Чем мы занимаемся</h2>
         <ul class="achievements__list">
           <li class="achievements__image">
@@ -148,13 +153,13 @@
             <p class="achievements__picture-title">дизайнерские решения</p>
           </li>
         </ul>
-      </div> -->
+      </div> 
     </section>
 
     <!--Наша команда-->
     <section class="team">
       <!--CONTAINER-->
-      <!-- <div class="container">
+       <div class="container">
         <h2 class="team__title">Наша команда</h2>
         <div class="team__description">
           <div class="team__fon">
@@ -329,12 +334,12 @@
             </ul>
           </div>
         </div>
-      </div> -->
+      </div> 
     </section>
   </main>
 
   <!--Постоянные клиенты-->
-  <!-- <section class="client">
+  <section class="client">
     <div class="container client-main">
       <h2 class="client__title">Постоянные клиенты</h2>
       <ul class="client__brand">
@@ -383,18 +388,18 @@
       </ul>
 
     </div>
-  </section> -->
+  </section>
 
   <!--футер-->
 
   <footer class="footer">
     <!--CONTAINER-->
-    <!-- <div class="container container-footer">
+    <div class="container__container-footer">
 
       <div class="footer__info">
         <a href="./studio.html" class="container-header__logo"><span class="container-header__logo-web">Web</span><span
             class="footer__studio">Studio</span></a>
-        <address>
+        <address class="footer__contact">
           <p class="footer__address">г. Киев, пр-т Леси Украинки, 26</p>
           <ul>
             <li>
@@ -436,11 +441,12 @@
       <div class="footer__contactus">
         <h3 class="footer__enjoyus">Подпишитесь на рассылку</h3>
         <div class="footer__form">
+          <div class="footer__form-space">
           <form>
             <label for="name"></label>
             <input type="text" class="footer__input" name="name" id="name" placeholder="E-mail" />
           </form>
-
+        </div>
           <div class="footer__button-contact">
             <button class="footer__button" data-modal-open>подписаться</button>
             <svg class="footer__svg-send">
@@ -450,7 +456,7 @@
         </div>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
@@ -459,7 +465,7 @@
         <svg class="modal__icon-close" width="11px" height="11px">
           <use href="./images/icon.svg#icon-close"></use>
         </svg>
-      </button>
+      </button> 
 
  <!-- Modal form  -->
       <form class="form">
@@ -525,8 +531,8 @@
      <button class="checkbox__button-primary " data-modal-open>отправить</button>
     </div>
 
-  </div> -->
+  </div> 
 
-  <script src="./js/modal.js"></script>
+  <script src="./js/modal.js"></script> 
 </body>
 </html>
