--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     <!-- Шапка сайта-->
 
     <header class="container-header">
-        <!-- <div class="container-header"> -->
+        <div class="container-header">
             <a href="./studio.html" class="container-header__logo"><span
                     class="container-header__logo-web">Web</span>Studio</a>
 
@@ -52,37 +52,42 @@
                         </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
-        <!-- </div> -->
+            <a href="#">
+                <svg class="team__icon-header">
+                  <use href="./images/icon.svg#icon-menu_mobile"></use>
+                </svg>
+              </a>
+        </div>
     </header>
 
     <!--Наши работы-->
     <section class="container-portfolio">
-        <div class="container">
+        <div class="container__section-portfolio">
             <div class="portfolio__button">
                 <h1 hidden>Portfolio.Our work</h1>
                 <ul class="portfolio__button-list">
-                    <li><button type="button" class="portfolio__button-all">Все</button></li>
-                    <li>
+                    <li class="portfolio__button-item"><button type="button" class="portfolio__button-all">Все</button></li>
+                    <li class="portfolio__button-item">
                         <button type="button" class="portfolio__button-secondary">Веб-сайты</button>
                     </li>
-                    <li>
+                    <li class="portfolio__button-item">
                         <button type="button" class="portfolio__button-secondary">Приложения</button>
                     </li>
-                    <li>
+                    <li class="portfolio__button-item">
                         <button type="button" class="portfolio__button-secondary">Дизайн</button>
                     </li>
-                    <li>
+                    <li class="portfolio__button-item">
                         <button type="button" class="portfolio__button-secondary">Маркетинг</button>
                     </li>
                 </ul>
-            </div>
+            </div> 
 
             <!-- CARD SET -->
 
-            <ul class="card__set">
+             <ul class="card__set">
                 <li class="card__item">
                     <div class="card__img">
-                        <img src="./images/технокряк.jpg" alt="Технокряк" width="370" height="294"/>
+                        <img src="./images/технокряк.jpg" alt="Технокряк"/>
 
                         <div class="card__overlay">
                             <p class="card__overlay-text">
@@ -100,7 +105,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img src="./images/постер.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" />
+                        <img src="./images/постер.jpg" alt="Постер New Orlean vs Golden Star"  />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
@@ -117,7 +122,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img src="./images/Seafood.jpg" alt="Ресторан Seafood" width="370" height="294"/>
+                        <img src="./images/Seafood.jpg" alt="Ресторан Seafood"/>
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
@@ -133,7 +138,7 @@
                 </li>
                 <li class="card__item">
                     <div class="card__img">
-                        <img src="./images/Prime.jpg" alt="Проект Prime" width="370" height="294" />
+                        <img src="./images/Prime.jpg" alt="Проект Prime"/>
 
                         <div class="card__overlay">
                             <p class="card__overlay-text">
@@ -151,7 +156,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img src="./images/постер.jpg" alt="Проект Boxes" width="370" height="294" />
+                        <img src="./images/постер.jpg" alt="Проект Boxes" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
@@ -168,7 +173,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img src="./images/Insparation.jpg" alt="Ресторан Seafood" width="370" height="294" />
+                        <img src="./images/Insparation.jpg" alt="Ресторан Seafood" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
@@ -184,7 +189,7 @@
                 </li>
                 <li class="card__item">
                     <div class="card__img">
-                        <img src="./images/Издание.jpg" alt="Издание Limited Edition" width="370" height="294" />
+                        <img src="./images/Издание.jpg" alt="Издание Limited Edition" />
 
                         <div class="card__overlay">
                             <p class="card__overlay-text">
@@ -235,13 +240,13 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </section>  
 
     <!--футер-->
 
-    <footer class="footer">
+     <footer class="footer"> 
         <!--CONTAINER-->
-        <div class="container container-footer">
+        <div class="container__container-footer">
             <div class="footer__info">
                 <a href="./studio.html" class="container-header__logo"><span
                         class="container-header__logo-web">Web</span><span class="footer__studio">Studio</span></a>
@@ -303,7 +308,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> 
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
@@ -316,7 +321,7 @@
         </div>
     </div>
 
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> 
 </body>
 
 </html>
