--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                         <a href="./index.html" class="container-header__current">Студия</a>
                     </li>
                     <li class="container-header__item">
-                        <a href="./portfolio.html" class="container-header__link">Портфолио</a>
+                        <a href="./portfolio.html" class="container-header__portfolio">Портфолио</a>
                     </li>
                     <li class="container-header__item">
                         <a href="./contact.html" class="container-header__link">Контакты</a>
@@ -120,7 +120,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img srcset="./images/seafood.jpg 1x, ./images/seafood@2x.jpg 2x" src="./images/Seafood.jpg" alt="Ресторан Seafood" />
+                        <img srcset="./images/seafood.jpg 1x, ./images/seafood@2x.jpg 2x" src="./images/seafood.jpg" alt="Ресторан Seafood" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
@@ -137,7 +137,7 @@
                 <li class="card__item">
                     <div class="card__img">
                         <img srcset="./images/prime.jpg 1x, ./images/prime@2x.jpg 2x"
-                        src="./images/Prime.jpg" alt="Проект Prime" />
+                        src="./images/prime.jpg" alt="Проект Prime" />
 
                         <div class="card__overlay">
                             <p class="card__overlay-text">
@@ -173,7 +173,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img  srcset="./images/Insparation.jpg 1x, ./images/Insparation@2x.jpg 2x" src="./images/Insparation.jpg" alt="Ресторан Seafood" />
+                        <img  srcset="./images/Insparation.jpg 1x, ./images/insparation@2x.jpg 2x" src="./images/Insparation.jpg" alt="Ресторан Seafood" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
