--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <h2 class="achievements__title">Чем мы занимаемся</h2>
         <ul class="achievements__list">
           <li class="achievements__image">
-            <img srcset="./images/desktop.jpg 1x, ./images/Desktop@2x.jpg 2x" src="./images/img1.jpg" alt="работа с кодом" width="370" />
+            <img srcset="./images/Desktop.jpg 1x, ./images/Desktop@2x.jpg 2x" src="./images/img1.jpg" alt="работа с кодом" width="370" />
             <p class="achievements__picture-title">десктопные приложения</p>
           </li>
           <li class="achievements__image">
@@ -257,7 +257,7 @@
           <div class="team__fon">
             <ul class="team__list">
               <li class="team__item">
-                <img class="picture" srcset="./images/marketingN.jpg 1x, ./images/marketingN@2x.jpg 2x"
+                <img class="picture" srcset="./images/MarketingN.jpg 1x, ./images/MarketingN@2x.jpg 2x"
         
             
                 src="./images/marketing.jpg" alt="Николай Тарасов" width="270" />
@@ -346,9 +346,7 @@
         </div>
       </div> 
     </section>
-  </main>
-
-  <!--Постоянные клиенты-->
+     <!--Постоянные клиенты-->
   <section class="client">
     <div class="container client-main">
       <h2 class="client__title">Постоянные клиенты</h2>
@@ -399,6 +397,7 @@
 
     </div>
   </section>
+  </main>
 
   <!--футер-->
 
@@ -491,7 +490,7 @@
       </ul>
       <ul class="mobile-list__contacts">
           <li class="mobile-item__contacts"> 
-              <a class="mobile-item__number" href="+380961111111"></a>
+              <a class="mobile-item__number" href="+380961111111">+38 096 111 11 11</a>
           </li>
           <li class="mobile-item__contacts">
           <a class="mobile-item__mail" href="mailto:info@devstudio.com">info@devstudio.com</a>    
