--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <!--Шапка сайта-->
 
-  <header class="container">
+  <header>
     <div class="container-header">
 
       <button class="menu-toggle js-open-menu" aria-expended="true" aria-controls="mobile-menu">
@@ -83,7 +83,7 @@
     <!--Особенности-->
 
     <section class="section__feature-main">
-      <div class="container feature">
+      <div class="container__feature">
         <h2 hidden class="feature__title">#</h2>
         <ul class="feature__list">
           <li class="feature__item">
