--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- Шапка сайта-->
-    <header class="container">
+    <header class="header">
         <div class="container-header">
 
             <button class="menu-toggle js-open-menu" aria-expended="true" aria-controls="mobile-menu">
@@ -120,7 +120,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img srcset="./images/seafood.jpg 1x, ./images/seafood@2x.jpg 2x" src="./images/seafood.jpg" alt="Ресторан Seafood" />
+                        <img srcset="./images/seafood.jpg 1x, ./images/seafood@2x.jpg 2x" src="./images/restourant.jpg" alt="Ресторан Seafood" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
@@ -136,8 +136,7 @@
                 </li>
                 <li class="card__item">
                     <div class="card__img">
-                        <img srcset="./images/prime.jpg 1x, ./images/prime@2x.jpg 2x"
-                        src="./images/prime.jpg" alt="Проект Prime" />
+                        <img srcset="./images/prime.jpg 1x, ./images/prime@2x.jpg 2x" src="./images/headphonce.jpg" alt="Проект Prime" />
 
                         <div class="card__overlay">
                             <p class="card__overlay-text">
@@ -156,7 +155,7 @@
                 <li class="card__item">
                     <div class="card__img">
                         <img srcset="./images/boxes.jpg 1x, ./images/boxes@2x.jpg 2x"
-                        src="./images/boxes.jpg" alt="Проект Boxes" />
+                        src="./images/коробки.jpg" alt="Проект Boxes" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
