--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img srcset="./images/websaite.jpg 1x, ./images/websaite@2x.jpg 2x" src="./images/технокряк.jpg" alt="Технокряк" />
+                        <img srcset="./images/seafood.jpg 1x, ./images/seafood@2x.jpg 2x" src="./images/ресторан.jpg" alt="Ресторан Seafood" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
