--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img srcset="./images/seafood.jpg 1x, ./images/seafood@2x.jpg 2x" src="./images/Seafood1.jpg" alt="Ресторан Seafood" />
+                        <img srcset="./images/seafood.jpg 1x, ./images/goldenstar@2x.jpg 2x" src="./images/Seafood1.jpg" alt="Seafood Restourant" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
@@ -136,7 +136,7 @@
                 </li>
                 <li class="card__item">
                     <div class="card__img">
-                        <img srcset="./images/prime.jpg 1x, ./images/prime@2x.jpg 2x" src="./images/Prime1.jpg" alt="Проект Prime" />
+                        <img srcset="./images/goldenstar.jpg 1x, ./images/goldenstar@2x.jpg 2x" src="./images/постер.jpg" alt="Постер New Orlean vs Golden Star" />
 
                         <div class="card__overlay">
                             <p class="card__overlay-text">
@@ -154,8 +154,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img srcset="./images/boxes.jpg 1x, ./images/boxes@2x.jpg 2x"
-                        src="./images/Boxes1.jpg" alt="Проект Boxes" />
+                        <img srcset="./images/goldenstar.jpg 1x, ./images/goldenstar@2x.jpg 2x" src="./images/постер.jpg" alt="Постер New Orlean vs Golden Star" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
