--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img srcset="./images/seafood.jpg 1x, ./images/goldenstar@2x.jpg 2x" src="./images/Seafood1.jpg" alt="Seafood Restourant" />
+                        <img srcset="./images/seafood.jpg 1x, ./images/seafood@2x.jpg 2x" src="./images/Seafood1.jpg" alt="Seafood Restourant" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
