--- a/portfolio.html
+++ b/portfolio.html
@@ -118,9 +118,9 @@
                     </div>
                 </li>
 
-                <!-- <li class="card__item">
+                <li class="card__item">
                     <div class="card__img">
-                        <img src="./images/seafood.jpg"/>
+                        <img srcset="./images/goldenstar.jpg 1x, ./images/goldenstar@2x.jpg 2x" src="./images/постер.jpg" alt="Постер New Orlean vs Golden Star" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
@@ -133,7 +133,7 @@
                         <h3 class="card__heading">Ресторан Seafood</h3>
                         <p class="card__specific">Приложение</p>
                     </div>
-                </li> -->
+                </li>
                 <li class="card__item">
                     <div class="card__img">
                         <img srcset="./images/goldenstar.jpg 1x, ./images/goldenstar@2x.jpg 2x" src="./images/постер.jpg" alt="Постер New Orlean vs Golden Star" />
