--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img srcset="./images/goldenstar.jpg 1x, ./images/goldenstar@2x.jpg 2x" src="./images/постер.jpg" alt="Постер New Orlean vs Golden Star" />
+                        <img src="./images/seafoodrest.jpg" alt="Seafood restourant"/>
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
