--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img src="./images/seafoodrest.jpg" alt="Seafood restourant"/>
+                        <img srcset="./images/seafoodrest.jpg 1x, ./images/seafood@2x.jpg 2x" src="./images/seafoodrest.jpg" alt="Seafood restourant"/>
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
