--- a/portfolio.html
+++ b/portfolio.html
@@ -136,7 +136,7 @@
                 </li>
                 <li class="card__item">
                     <div class="card__img">
-                        <img srcset="./images/primemain.jpg 1x, ./images/goldenstar@2x.jpg 2x" src="./images/primemain.jpg" alt="Prime" />
+                        <img srcset="./images/primemain.jpg 1x, ./images/prime@2x.jpg 2x" src="./images/primemain.jpg" alt="Prime" />
 
                         <div class="card__overlay">
                             <p class="card__overlay-text">
@@ -154,7 +154,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img srcset="./images/boxmain.jpg 1x, ./images/boxes@2x.jpg 2x" src="./images/boxmain.jpg" alt="Постер New Orlean vs Golden Star" />
+                        <img srcset="./images/boxmain.jpg 1x, ./images/boxes@2x.jpg 2x" src="./images/boxmain.jpg" alt="Boxes" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
@@ -171,7 +171,7 @@
 
                 <li class="card__item">
                     <div class="card__img">
-                        <img  srcset="./images/Insparation.jpg 1x, ./images/insparation@2x.jpg 2x" src="./images/Insparation.jpg" alt="Ресторан Seafood" />
+                        <img  srcset="./images/Insparation.jpg 1x, ./images/insparation@2x.jpg 2x" src="./images/Insparation.jpg" alt="Inspiration has no Borders" />
                         <div class="card__overlay">
                             <p class="card__overlay-text">
                                 Технокряк это современная площадка распространения
