--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <div class="team__fon">
             <ul class="team__list">
               <li class="team__item">
-                <img class="picture" srcset="./images/frontend.jpg 1x, ./images/frontend@2x.jpg 2x" src="./images/frontend.jpg" alt="Ольга Репина" width="270" />
+                <img class="picture" srcset="./images/frontend.jpg 1x, ./images/frontend@2x.jpg 2x" src="./images/frontendmain.jpg" alt="Ольга Репина" width="270" />
                 <h3 class="team__name">Ольга Репина</h3>
                 <p class="team__specialization">
                   Frontend Developer
